stdout
   Compiling compiler_builtins v0.1.140
   Compiling core v0.0.0 (/home/guavabot1/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core)
   Compiling autocfg v1.4.0
   Compiling rustversion v1.0.19
   Compiling bootloader v0.9.29
   Compiling lock_api v0.4.12
   Compiling rustc-std-workspace-core v1.99.0 (/home/guavabot1/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/rustc-std-workspace-core)
   Compiling alloc v0.0.0 (/home/guavabot1/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/alloc)
   Compiling bit_field v0.10.2
   Compiling volatile v0.4.6
   Compiling bitflags v2.6.0
   Compiling scopeguard v1.2.0
   Compiling x86_64 v0.14.13
   Compiling bitflags v1.3.2
   Compiling spin v0.9.8
   Compiling spin v0.5.2
   Compiling spinning_top v0.2.5
   Compiling lazy_static v1.5.0
   Compiling linked_list_allocator v0.10.5
   Compiling pc-keyboard v0.5.1
   Compiling volatile v0.2.7
   Compiling pic8259 v0.10.4
   Compiling uart_16550 v0.2.19
   Compiling scribble v0.1.0 (/home/guavabot1/scribble)
error[E0463]: can't find crate for `std`
  |
  = note: the `x86_64-scribble` target may not support the standard library
  = note: `std` is required by `scribble` because it does not declare `#![no_std]`
  = help: consider building the standard library from source with `cargo build -Zbuild-std`

error[E0432]: unresolved import `crate::interrupts`
 --> src/lib.rs:4:16
  |
4 |     use crate::interrupts::{init_idt, PICS}; // Add these imports at the top of the function
  |                ^^^^^^^^^^
  |                |
  |                unresolved import
  |                help: a similar path exists: `x86_64::instructions::interrupts`

error: cannot find attribute `derive` in this scope
  --> src/lib.rs:72:3
   |
72 | #[derive(Debug, Clone, Copy, PartialEq, Eq)]
   |   ^^^^^^
   |
help: consider importing this attribute macro
   |
2  + use core::prelude::rust_2024::derive;
   |

error: cannot find macro `println` in this scope
  --> src/lib.rs:59:5
   |
59 |     println!("{}", info);
   |     ^^^^^^^

error: cannot find macro `println` in this scope
  --> src/lib.rs:39:5
   |
39 |     println!("System initialization complete!");
   |     ^^^^^^^

error: cannot find macro `println` in this scope
  --> src/lib.rs:36:5
   |
36 |     println!("Enabling interrupts...");
   |     ^^^^^^^

error: cannot find macro `println` in this scope
  --> src/lib.rs:32:5
   |
32 |     println!("Initializing keyboard...");
   |     ^^^^^^^

error: cannot find macro `println` in this scope
  --> src/lib.rs:28:5
   |
28 |     println!("Initializing heap...");
   |     ^^^^^^^

error: cannot find macro `println` in this scope
  --> src/lib.rs:21:5
   |
21 |     println!("Setting up memory management...");
   |     ^^^^^^^

error: cannot find macro `println` in this scope
  --> src/lib.rs:15:5
   |
15 |     println!("Configuring PIC...");
   |     ^^^^^^^

error: cannot find macro `println` in this scope
  --> src/lib.rs:12:5
   |
12 |     println!("Setting up IDT...");
   |     ^^^^^^^

error: cannot find macro `println` in this scope
 --> src/lib.rs:9:5
  |
9 |     println!("Loading GDT...");
  |     ^^^^^^^

error: cannot find macro `println` in this scope
 --> src/lib.rs:7:5
  |
7 |     println!("Initializing system...");
  |     ^^^^^^^

error: cannot find macro `println` in this scope
 --> src/lib.rs:6:5
  |
6 |     println!("=== Scribble OS ===");
  |     ^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `memory`
  --> src/lib.rs:25:9
   |
25 |         memory::BootInfoFrameAllocator::init(&boot_info.memory_map)
   |         ^^^^^^ use of undeclared crate or module `memory`

error[E0412]: cannot find type `BootInfo` in this scope
 --> src/lib.rs:2:33
  |
2 | pub fn init(boot_info: &'static BootInfo) {
  |                                 ^^^^^^^^ not found in this scope
  |
help: consider importing this struct
  |
2 + use bootloader::BootInfo;
  |

error[E0433]: failed to resolve: use of undeclared type `VirtAddr`
  --> src/lib.rs:22:27
   |
22 |     let phys_mem_offset = VirtAddr::new(boot_info.physical_memory_offset);
   |                           ^^^^^^^^ use of undeclared type `VirtAddr`
   |
help: consider importing this struct
   |
2  + use x86_64::VirtAddr;
   |

error[E0412]: cannot find type `PanicInfo` in this scope
  --> src/lib.rs:58:17
   |
58 | fn panic(info: &PanicInfo) -> ! {
   |                 ^^^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
2  + use core::panic::PanicInfo;
   |

error[E0433]: failed to resolve: use of undeclared crate or module `gdt`
  --> src/lib.rs:10:5
   |
10 |     gdt::init();
   |     ^^^ use of undeclared crate or module `gdt`

error[E0433]: failed to resolve: use of undeclared crate or module `memory`
  --> src/lib.rs:23:31
   |
23 |     let mut mapper = unsafe { memory::init(phys_mem_offset) };
   |                               ^^^^^^ use of undeclared crate or module `memory`

error[E0433]: failed to resolve: use of undeclared crate or module `allocator`
  --> src/lib.rs:29:5
   |
29 |     allocator::init_heap(&mut mapper, &mut frame_allocator)
   |     ^^^^^^^^^ use of undeclared crate or module `allocator`

error[E0433]: failed to resolve: use of undeclared crate or module `keyboard`
  --> src/lib.rs:33:5
   |
33 |     keyboard::initialize();
   |     ^^^^^^^^ use of undeclared crate or module `keyboard`

Some errors have detailed explanations: E0412, E0432, E0433, E0463.
For more information about an error, try `rustc --explain E0412`.
error: could not compile `scribble` (lib) due to 22 previous errors
Error: Kernel build failed.
Stderr: 
